# autoimportopensync

./: AUTHORS  CMakeLists.txt  CODING  COPYING  CTestConfig.cmake  ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  MobileStation-api.txt  MobileStation.py  README  RELEASE  SConstruct  TODO  acinclude.m4  buildtest.sh  config.h.cmake  config.h.in  configure  configure.ac  configure.in  configure.in.in  libopensync.pc.in  opensync-1.0-uninstalled.pc.in  opensync-1.0.pc.in  opensync.pc.in  opensync.sym  osengine-1.0-uninstalled.pc.in  osengine-1.0.pc.in  osengine.pc.in  palm_sync.gladep  support.py
cmake/: CMakeLists.txt  Compiler.cmake  OpenSyncDefaults.cmake  OpenSyncInternal.cmake.in  OpenSyncPackaging.cmake  OpenSyncPlatforms.cmake  OpenSyncTesting.cmake
cmake/modules/: CMakeLists.txt  FindGModule2.cmake  FindGThread2.cmake  FindGlib2.cmake  FindOpenSync.cmake  FindSqlite.cmake  OpenSyncDefaults.cmake  OpenSyncInternal.cmake  OpenSyncInternal.cmake.in  OpenSyncPlatforms.cmake
engine/: Makefile  Makefile.am  Makefile.in  engine.h  engine_internals.h  osengine_client.c  osengine_client_internals.h  osengine_debug.c  osengine_debug.h  osengine_engine.c  osengine_engine.h  osengine_engine_internals.h  osengine_flags.c  osengine_flags_internals.h  osengine_mapping.c  osengine_mapping.h  osengine_mapping_internals.h  osengine_message.c  osengine_message_internals.h  osengine_queue.c  osengine_queue_internals.h  osengine_status.c  osengine_status.h
engine/.deps/: itm_message.Plo  itm_queue.Plo  msync_client.Plo  msync_debug.Plo  msync_engine.Plo  msync_flags.Plo  msync_mapping.Plo  msync_status.Plo  osengine_client.Plo  osengine_debug.Plo  osengine_engine.Plo  osengine_flags.Plo  osengine_mapping.Plo  osengine_message.Plo  osengine_queue.Plo  osengine_status.Plo
engine/.libs/: libosengine.lai  libosengine.so.0  libosengine.so.0.0.0
evolution2/: CMakeLists.txt  ChangeLog  Makefile.am  config.h.in  configure.in
evolution2/misc/: evolution2.spec.in
evolution2/src/: CMakeLists.txt  Makefile.am  evo2-sync  evo2-sync.xsd  evolution2_ebook.c  evolution2_ecal.c  evolution2_ecal.h  evolution2_etodo.c  evolution2_etodo.h  evolution2_memo.c  evolution2_memo.h  evolution2_sync.c  evolution2_sync.h  evolution2_xml.c  evolution2_xml.h
evolution2/tests/: check_contact  check_event  check_todo
file-sync/: AUTHORS  CMakeLists.txt  Makefile.am  configure.in
file-sync/misc/: file-sync.spec.in
file-sync/src/: CMakeLists.txt  Makefile.am  file-sync  file-sync.xsd  file.c  file_sync.c  file_sync.h  file_sync_conf.c  filename_scape.h
file-sync/tests/: Makefile.am  check_data
formats/: CMakeLists.txt  Makefile.am  SConscript  calendar.c  contact.c  data.c  event.c  file.c  file.h  note.c  plain.c  todo.c  xml-support.c  xml.c  xml.h  xmlformat-calendar.h  xmlformat-common.h  xmlformat-contact.h  xmlformat-doc.c  xmlformat-event.h  xmlformat-note.h  xmlformat-todo.h  xmlformat.c  xmlformat.h  xmlformat_compare.c
formats/v-xml/: Makefile.am  xml-vtodo.c
formats/vformats-xml/: Makefile.am  e-vcard.c  e-vcard.h  opensync-xml-contact.h  opensync-xml.h  vcalical.c  vcalical.h  vformat.c  vformat.h  xml-evolution.c  xml-kde.c  xml-support.c  xml-support.h  xml-vcal.c  xml-vcal.h  xml-vcard.c  xml-vcard.h  xml-vevent.c  xml-vnote.c  xml-vnote.h  xml-vtodo.c  xmldoc.c  xmlformat-common.c  xmlformat-common.h  xmlformat-doc.c  xmlformat-event.c  xmlformat-event.h  xmlformat-ical.c  xmlformat-ical.h  xmlformat-vcal.c  xmlformat-vcal.h  xmlformat-vcalendar.c  xmlformat-vcalendar.h  xmlformat-vcard.c  xmlformat-vcard.h  xmlformat-vevent.c  xmlformat-vevent.h  xmlformat-vevent10.c  xmlformat-vevent10.h  xmlformat-vevent20.c  (+11 more)
formats/xml/: Makefile.am  e-vcard.c  xml-evolution.c  xml-vcard.c  xml-vcard21.c  xml-vcard30.c  xml.c  xml.h
gnokii-sync/: CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  SConstruct  configure.in
gnokii-sync/src/: CMakeLists.txt  Makefile.am  SConscript  gnokii-sync  gnokii-sync.xsd  gnokii_calendar.c  gnokii_calendar.h  gnokii_calendar_format.c  gnokii_calendar_format.h  gnokii_calendar_utils.c  gnokii_comm.c  (+12 more)
google-calendar/: AUTHORS  CMakeLists.txt  COPYING  INSTALL  NEWS  README  configure.ac
gpe/: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  HOWTO  INSTALL  README  SConstruct  configure.in
irmc-sync/: AUTHORS  CMakeLists.txt  README  SConstruct  config.h  config.h.cmake  configure.in
kdepim/: CMakeLists.txt  Makefile.am  README  configure.ac  configure.in
ldap-sync/: README  configure.ac
moto-sync/: AUTHORS  CMakeLists.txt  README  moto-sync  moto-sync.conf  moto-sync.py  moto-sync.xsd  motosync.py  mototest.py  mototool
opensync/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  README  SConscript  TODO  acinclude.m4  configure.in  easyipc.c  easyipc.h  ipctest.c  opensync-archive.h  opensync-client.h  opensync-context.h  opensync-data.h  opensync-db.h  opensync-engine.h  opensync-error.h  opensync-format.h  opensync-group.h  opensync-helper.h  opensync-ipc.h  opensync-mapping.h  opensync-merger.h  opensync-module.h  opensync-plugin.h  opensync-serializer.h  opensync-support.h  opensync-time.h  opensync-version.h  opensync-xmlformat.h  opensync.h  opensync_anchor.c  opensync_anchor.h  opensync_change.c  opensync_change.h  opensync_change_internals.h  opensync_changecmds.c  opensync_changecmds.h  (+57 more)
opie-sync/: AUTHORS  CMakeLists.txt  README  SConstruct  config.h.in  configure.ac
osengine/: Makefile.am  SConscript  engine.h  engine_internals.h  osengine_client.c  osengine_client_internals.h  osengine_debug.c  osengine_debug.h  osengine_debug_internals.h  osengine_deciders.c  osengine_engine.c  osengine_engine.h  osengine_engine_internals.h  osengine_flags.c  osengine_flags_internals.h  osengine_mapcmds.c  osengine_mapcmds_internals.h  osengine_mapping.c  osengine_mapping.h  osengine_mapping_internals.h  osengine_message.c  osengine_message_internals.h  osengine_queue.c  osengine_queue_internals.h  osengine_status.c  osengine_status.h
osplugin/: Makefile.am  osplugin.c
palm/: CMakeLists.txt  README  acinclude.m4  autogen.sh  configure.ac
(+1558 files in other folders)
