dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.58)
AC_INIT([OpenSync Evolution 2 Plugin], 0.01, [], [libopensync-plugin-evo2])
AM_INIT_AUTOMAKE(foreign)
AC_CONFIG_SRCDIR(src/evolution2_sync.c)
AC_CONFIG_HEADER(config.h)

pkg_modules="glib-2.0 evolution-data-server-1.0 libebook-1.0 libecal-1.0 libedata-book-1.0 libedata-cal-1.0 libedataserver-1.0 opensync-1.0"
pkg_modules2="glib-2.0 evolution-data-server-1.1 libebook-1.1 libecal-1.1 libedata-book-1.1 libedata-cal-1.1 libedataserver-1.1 opensync-1.0"

export PKG_CONFIG_PATH=${PKG_CONFIG_PATH}:/usr/lib/pkgconfig:$prefix/lib/pkgconfig:/usr/local/lib/pkgconfig
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules], EDS10FOUND=1, [EDS10FOUND=0])
if test "x${EDS10FOUND}" = "x0"; then
	PKG_CHECK_MODULES(PACKAGE, [$pkg_modules2],,AC_MSG_ERROR(Neither evolution-data-server-1.0-dev nor evolution-data-server-1.1-dev was found))
fi

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

OPENSYNC_CONFIGDIR=$(pkg-config --variable=configdir opensync-1.0)
OPENSYNC_PLUGINDIR=$(pkg-config --variable=plugindir opensync-1.0)
OPENSYNC_FORMATSDIR=$(pkg-config --variable=formatsdir opensync-1.0)
OPENSYNC_HEADERDIR=$(pkg-config --variable=headerdir opensync-1.0)

AC_SUBST(OPENSYNC_CONFIGDIR)
AC_SUBST(OPENSYNC_PLUGINDIR)
AC_SUBST(OPENSYNC_FORMATSDIR)
AC_SUBST(OPENSYNC_HEADERDIR)

AC_ARG_ENABLE(stress-test,               [  --enable-stress-test     enable support for stress testing],STRESS_TEST=1,STRESS_TEST=0)
if test "x${STRESS_TEST}" = "x1"; then
	AC_DEFINE(STRESS_TEST,1,[Stress Testing])
fi

AC_OUTPUT([
Makefile
src/Makefile
])

echo "================"
if test "x${STRESS_TEST}" = "x1"; then
	echo "Stress Tests are enabled."
else
	echo "Stress Tests are disabled."
fi
echo "================"
