INCLUDE_DIRECTORIES( ${GLIB2_INCLUDE_DIRS} )

INCLUDE( OpenSyncPlugin )

OPENSYNC_FORMAT_ADD( file file.c )
OPENSYNC_FORMAT_ADD( plain plain.c )
OPENSYNC_FORMAT_ADD( xmlformat xmlformat.c )
OPENSYNC_FORMAT_ADD( xmlformat-doc xmlformat-doc.c )

TARGET_LINK_LIBRARIES( file ${OPENSYNC_LIBRARY} ${GLIB2_LIBRARIES} )
TARGET_LINK_LIBRARIES( plain ${OPENSYNC_LIBRARY} ${GLIB2_LIBRARIES} )
TARGET_LINK_LIBRARIES( xmlformat ${OPENSYNC_LIBRARY} ${GLIB2_LIBRARIES} )
TARGET_LINK_LIBRARIES( xmlformat-doc ${OPENSYNC_LIBRARY} ${GLIB2_LIBRARIES} )

###### INSTALL ##############	

OPENSYNC_FORMAT_INSTALL( file )
OPENSYNC_FORMAT_INSTALL( plain )
OPENSYNC_FORMAT_INSTALL( xmlformat )
OPENSYNC_FORMAT_INSTALL( xmlformat-doc )


INSTALL( FILES file.h DESTINATION ${OPENSYNC_INCLUDE_DIR}/opensync )

