LINK_DIRECTORIES( ${GLIB2_LIBRARY_DIRS} ${LIBXML2_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES( ${GLIB2_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS} )

INCLUDE( OpenSyncPlugin )

OPENSYNC_FORMAT_ADD( file file.c )
OPENSYNC_FORMAT_ADD( plain plain.c )
OPENSYNC_FORMAT_ADD( xmlformat xmlformat.c xmlformat_compare.c )
OPENSYNC_FORMAT_ADD( xmlformat-doc xmlformat-doc.c )

ADD_LIBRARY( xmlformat-compare STATIC xmlformat_compare.c )

TARGET_LINK_LIBRARIES( file opensync ${GLIB2_LIBRARIES} )
TARGET_LINK_LIBRARIES( plain opensync ${GLIB2_LIBRARIES} )
TARGET_LINK_LIBRARIES( xmlformat opensync ${GLIB2_LIBRARIES} ${LIBXML2_LIBRARIES} )
TARGET_LINK_LIBRARIES( xmlformat-doc opensync ${GLIB2_LIBRARIES} )

###### INSTALL ##############	

OPENSYNC_FORMAT_INSTALL( file )
OPENSYNC_FORMAT_INSTALL( plain )
OPENSYNC_FORMAT_INSTALL( xmlformat )
OPENSYNC_FORMAT_INSTALL( xmlformat-doc )


INSTALL( FILES file.h DESTINATION ${OPENSYNC_INCLUDE_DIR}/opensync )

